2005-12-03  Per Bothner  <per@bothner.com>

	* kawa/lang/Quote.java (rewrite): Fix error message.

	* kawa/lang/Translator.java (namespaceResolve): Combine code paths
	to reduce code duplication.

	* kawa/lang/Translator.java (namespaceResolve): Use new makeExp method.

2005-11-30  Per Bothner  <per@bothner.com>

	* kawa/lang/Lambda.java (rewriteBody): Set/reset curMethodLambda
	if we're in a top-level methods and supertype has been specified.
	* kawa/standard/thisRef.java (rewriteForm): Allow (this) in a top-level
	function whose module has the super-type explicitly specified.  In
	that case create a matching Declaration, if needed.

2005-11-29  Per Bothner  <per@bothner.com>

	* kawa/lang/Quote.java: Make various methods non-static, and make
	some methods/fields protected so derived class can use it.
	(leaf): New wrapper around QuoteExp construction, for overriding.
	(expand_pair): Extend unqute and unquote-splicing to allow multiple
	arguments, to match Alan Bawden's suggestion (1999).
	(append$V): New method, to handle SyntaxForm wrappers.
	* kawa/lang/Translator.java (matches): New variant takes SyntaxForm.
	* kawa/standard/Scheme.java (initScheme): Define quasisyntax.
	Re-arrange R5RS vs syntax-case macros.
	(createReadTable): Define #` as quasisyntax.
	* kawa/standard/syntax.java: Change to extend kawa.lang.Quote.
	This provides quasisyntax support.
	(wrap, convert): Remove unused methods.  (Was also unused before.)

	* kawa/standard/define_alias.java (scanForDefinitions): Handle
	SyntaxForm unwrapping.

2005-11-28  Per Bothner  <per@bothner.com>

	* kawa/lang/CompileFile.java (compile_to_files): Set top-level
	class name only if passed in.
	
2005-11-27  Per Bothner  <per@bothner.com>

	* kawa/standard/load.java (loadCompiled): Used WrappedException.

2005-11-23  Per Bothner  <per@bothner.com>

	* kawa/standard/module_name (scanForm): Do the SyntaxForm handling
	in case this is called in a macro.
	Allocate Compilation's mainClass if not set yet.